NEWS for Seq66 0.99.14
Chris Ahlstrom
2015-07-10 to 2024-08-06

# Changelog

## [0.99.14]

    To do.

### Added

- Added the use of the Esc key to close the external song editor window
  if not playing and not in adding mode. Similar to the fix made to
  the pattern editor for issue #117.

### Fixed

- In the zoomer class, rearranged members to avoid a warning (error)
  from g++ v. 14.2.1 about zoom being uninitialized in the constructor.

## [0.99.13] - 2024-08-05

    This release is minor, a couple of lesser feature and some fixes.
    No release files are provided, no Windows installer. We've been
    working on another project, and it is time to move forward here.

### Added

- Added 'progress-box-elliptical' to the 'usr' file.
  It is a 'usr' option to show an elliptical progress box.
- New license files adhering to GitHub conventions.

### Fixed

- Fixed the writing and byte-counting of the end-of track event.
  This adds 1 byte to the size of a Se66 MIDI file.
- Fixed the counting of the size of empty note strings. Empty notes
  alway have a two-byte (short) note length of 0.

### Changed

- Changed the Tempo Track setting fields slightly in Edit / Preferences
  for clarity.
- Added more robust handling of the Seq66 SeqSpec track. This is the final
  track in an Seq66 MIDI file, and is not counted. But some applications
  might count it as a track when saving the MIDI file.
- In sequence::play() we now put SysEx events on the output bus.

### Removed

- Removed LICENSE and the licensing text files it refers to.

## [0.99.12] - 2024-01-13

### Added

- Clang compiler support.
- Provisional build process for FreeBSD.
- Added an autogen.sh script to reconfigure without using bash.
- Added 'rc' option to skip, recover, or abort from bad running
  status in MIDI files (trilogy.mid).

### Fixed

- Errors and warnings revealed by Clang.
- The reading, processing, writing, and display of SysEx and Meta