@@ -28,7 +28,7 @@
  * \library       seq66 application
  * \author        Chris Ahlstrom
  * \date          2018-01-01
- * \updates       2023-11-27
+ * \updates       2024-08-08
  * \license       GNU GPLv2 or above
  */
 
@@ -204,6 +204,7 @@ private slots:
     void slot_dark_theme_click ();
     void slot_swap_coordinates_click ();
     void slot_bold_grid_slots_click();
+    void slot_elliptical_click();
     void slot_follow_progress_click();
     void slot_double_click_edit ();
     void slot_global_seq_feature ();
